syntax = "proto3";

option go_package = "github.com/bazmurphy/go-cas/keyvaluestore";

package keyvaluestore;

service KeyValueStoreService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
  rpc Cas (CasRequest) returns (CasResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  int64 value = 1;
}

message SetRequest {
  string key = 1;
  int64 value = 2;
}

message SetResponse {
  bool success = 1;
}

message CasRequest {
  string key = 1;
  int64 expected_value = 2;
  int64 new_value = 3;
}

message CasResponse {
  bool success = 1;
}